fix banner image on mobile

--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -6,6 +6,10 @@
 		div.news-article-body {
 				padding: 0 480px 16px 16px;
 		}
+
+		div.news_banner_container {
+				padding-right: 480px;
+		}
 }
 
 @media screen and (max-width: 1100px) {
@@ -205,7 +209,6 @@ body {
 
 div.news_banner_container {
   text-align: left;
-	padding-right: 480px;
 }
 
 img.splash-ad {
